# claude-spec

./: .coverage  .gitignore  .worktree-info  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  claude-spec.config.json  pyproject.toml
.claude/: hooks.json
.claude-plugin/: marketplace.json  plugin.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: adr-sync.yml  adr-validate.yml  ci.yml  release.yml
analyzers/: __init__.py  analyze_cli.py  log_analyzer.py
commands/: approve.md  code-cleanup.md  code-fix.md  code-review.md  complete.md  deep-clean.md  deep-explore.md  deep-research.md  implement.md  log.md  memory-context.md  memory-recall.md  memory-remember.md  memory.md  p.md  plan.md  report-issue.md  spec-issue.md  status.md  worktree-cleanup.md  worktree-create.md  worktree-setup.md  worktree-status.md
commands/wt/: cleanup.md  setup.md  status.md
docs/: ARCHITECTURE.md  CONFIG_REFERENCE.md
docs/V1/: claude-spec-memory-v1-execution-prompt.md  claude-spec-memory-v1-expansion-plan.md
docs/design/: ARCHITECTURE.md  CHANGELOG.md  DECISIONS.md  IMPLEMENTATION_PLAN.md  PROGRESS.md  README.md  REQUIREMENTS.md
filters/: __init__.py  log_entry.py  log_writer.py  pipeline.py
hooks/: check-approved-spec.sh  command_detector.py  complete.md  hooks.json  post_command.py  session_start.py
hooks/lib/: __init__.py  config_loader.py
memory/: DEVELOPER_GUIDE.md  USER_GUIDE.md  capture.py  embedding.py  index.py  patterns.py  sync.py  utils.py
plugins/cs/: .cs-session-state.json  .gitignore  CHANGELOG.md  CODE_REVIEW.md  LICENSE  Makefile  README.md  REMEDIATION_REPORT.md  REMEDIATION_TASKS.md  REVIEW_SUMMARY.md  pyproject.toml
plugins/cs/.claude-plugin/: plugin.json
plugins/cs/analyzers/: __init__.py  analyze_cli.py  log_analyzer.py
plugins/cs/commands/: c.md  context.md  fix.md  i.md  log.md  memory.md  migrate.md  p.md  recall.md  remember.md  review.md  s.md
plugins/cs/filters/: __init__.py  log_entry.py  log_writer.py  pipeline.py
plugins/cs/hooks/: command_detector.py  hooks.json  post_command.py  post_tool_capture.py  prompt_capture.py  run-hook.sh  session_start.py  trigger_memory.py
plugins/cs/learnings/: DEVELOPER_GUIDE.md  __init__.py  deduplicator.py  detector.py  extractor.py  models.py
plugins/cs/memory/: DEVELOPER_GUIDE.md  USER_GUIDE.md  __init__.py  capture.py  config.py  embedding.py  exceptions.py  git_ops.py  index.py  lifecycle.py  models.py  note_parser.py  patterns.py  recall.py  search.py  sync.py  utils.py
plugins/cs/scripts/: test_pr_manager.py
plugins/cs/steps/: __init__.py  base.py  context_loader.py  log_archiver.py  marker_cleaner.py  memory_queue_flusher.py  pr_manager.py  retrospective_gen.py  security_reviewer.py
plugins/cs/templates/: ARCHITECTURE.md  DECISIONS.md  PROGRESS.md  README.md  RESEARCH_NOTES.md  RETROSPECTIVE.md
plugins/cs/tests/: test_analyzer.py  test_command_detector.py  test_config_loader.py  test_file_queue.py  test_hook.py  test_hook_memory_integration.py  test_hooks_lib.py  test_learnings_deduplicator.py  test_learnings_detector.py  test_learnings_extractor.py  test_learnings_models.py  test_log_entry.py  (+10 more)
scripts/github-issues/: README.md  build-issue-prompt.sh  check-gh-prerequisites.sh  create-issue-worktree.sh  generate-branch-name.sh  get-branch-prefix.sh  post-issue-comment.sh
skills/worktree-manager/: SKILL.md
steps/: __init__.py  base.py  context_loader.py  log_archiver.py  marker_cleaner.py  retrospective_gen.py  security_reviewer.py
templates/: CHANGELOG.md  IMPLEMENTATION_PLAN.md  PROGRESS.md  REQUIREMENTS.md
tests/: __init__.py  test_analyze_cli.py  test_analyzer.py  test_command_detector.py  test_config_loader.py  test_github_issues_scripts.py  test_log_analyzer.py  test_log_entry.py  test_log_writer.py  test_pipeline.py  test_post_command.py  test_session_start.py  test_steps.py
tests/memory/: test_benchmark.py  test_init.py  test_models.py
utils/: context_utils.py
(+193 files in other folders)
